--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ http://www.tooplate.com/view/2100-artist
   
                     <div class="support-cus">
                          <h4>Contact Info</h4>
-                         <p><a href="#">ranazsaad4@gmail.com</a></p>
+                         <p><a href="#">Utkarsh.</a></p>
    
 
 </footer>
@@ -199,4 +199,5 @@ http://www.tooplate.com/view/2100-artist
 <script src="js/custom.js"></script>
 
 </body>
+
 </html>
